--- a/app/index.html
+++ b/app/index.html
@@ -4,10 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="thalby.ico" type="image/x-icon">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="theme-color" content="#111111">
-  <title>New Site</title>
+  <title>Thalby</title>
   <!-- <link rel="preload" href="fonts/Roboto.woff2" as="font" type="font/woff2" crossorigin> -->
   <link rel="stylesheet" href="css/vendor.css">
   <link rel="stylesheet" href="css/main.css">
@@ -49,6 +49,45 @@
             <button class="btn hero__btn">Shop Now</button>
         </div>
         <img src="../img/hero-img.png" alt="tablet" class="hero__img">
+    </div>
+</section>
+      <section class="about">
+    <div class="container about__container">
+            <h2 class="section-title about__title">Our guides explain countries and cultures.</h2>
+            <p class="about__descr about__descr--top">Are you curious about the world around you? Our guides are for smart global citizens, world travelers and engaged residents who want to gain a deeper understanding of the cultures and societies they care about.</p>
+            <p class="about__descr">Available as ebooks here and on Amazon.</p>
+    </div>
+</section>
+      <section class="best-sellers">
+    <div class="container best-sellers__container">
+        <h2 class="section-title best-sellers__title">Our best sellers</h2>
+        <ul class="best-sellers__list">
+            <li class="best-sellers__item sellers-card">
+                <img src="../img/sellers-img-1.png" alt="French culture card" class="sellers-card__img sellers-card__img--short">
+                <div class="sellers-card__content sellers-card__content--short">
+                    <h3 class="sellers-card__title sellers-card__title--short">Thalby Guide to French Culture and Heritage</h3>
+                    <span class="sellers-card__price">USD 6.99</span>
+                    <span class=" btn-link sellers-card__link">Add to cart</span>
+                </div>
+            </li>
+            <li class="best-sellers__item sellers-card">
+                <img src="../img/sellers-woman-1.png" alt="French society card" class="sellers-card__img">
+                <div class="sellers-card__content">
+                    <h3 class="sellers-card__title">Thalby Guide to French People and Society</h3>
+                    <span class="sellers-card__price">USD 6.99</span>
+                    <span class=" btn-link sellers-card__link">Add to cart</span>
+                </div>
+            </li>
+            <li class="best-sellers__item sellers-card">
+                <img src="../img/sellers-woman-2.png" alt="German culture card" class="sellers-card__img">
+                <div class="sellers-card__content">
+                    <h3 class="sellers-card__title">Thalby Guide to German Culture and Heritage</h3>
+                    <span class="sellers-card__price">USD 6.99</span>
+                    <span class=" btn-link sellers-card__link">Add to cart</span>
+                </div>
+            </li>
+         
+        </ul>
     </div>
 </section>
     </main>
