--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
     @include('partials/header.html')
     <main class="main">
       @include('partials/hero.html')
+      @include('partials/about.html')
+      @include('partials/best-sellers.html')
     </main>
 
     @include('partials/footer.html')
