сделаны секции guide + адаптив

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,9 @@
       @include('partials/hero.html')
       @include('partials/about.html')
       @include('partials/best-sellers.html')
+      @include('partials/society-guide.html')
+      @include('partials/culture-guide.html')
+      @include('partials/politics-guide.html')
     </main>
 
     @include('partials/footer.html')
