--- a/app/index.html
+++ b/app/index.html
@@ -53,14 +53,14 @@
 </section>
       <section class="about">
     <div class="container about__container">
-            <h2 class="section-title about__title">Our guides explain countries and cultures.</h2>
+            <h2 class="section-title section-title--center about__title">Our guides explain countries and cultures.</h2>
             <p class="about__descr about__descr--top">Are you curious about the world around you? Our guides are for smart global citizens, world travelers and engaged residents who want to gain a deeper understanding of the cultures and societies they care about.</p>
             <p class="about__descr">Available as ebooks here and on Amazon.</p>
     </div>
 </section>
       <section class="best-sellers">
     <div class="container best-sellers__container">
-        <h2 class="section-title best-sellers__title">Our best sellers</h2>
+        <h2 class="section-title section-title--center best-sellers__title">Our best sellers</h2>
         <ul class="best-sellers__list">
             <li class="best-sellers__item sellers-card">
                 <img src="../img/sellers-img-1.png" alt="French culture card" class="sellers-card__img sellers-card__img--short">
@@ -88,6 +88,42 @@
             </li>
          
         </ul>
+    </div>
+</section>
+      <section class="society-guide guide">
+    <div class="container">
+        <div class="guide__container">
+            <img src="../img/guide-society__img.png" alt="Society guide poster" class="guide__img">
+            <div class="guide__content">
+            <h2 class="section-title guide__title">People and Society</h2>    
+            <p class="guide__descr">Our guides to society deliver all the social insight you need, helping you understand how people live, love and play today and why communities are the way they are.</p>
+            <button class="btn-link guide__link">Shop Society Guides</button>
+            </div>
+        </div>
+    </div>
+</section>
+      <section class="culture-guide guide">
+    <div class="container">
+        <div class="guide__container guide__container--flex-reverse">
+            <img src="../img/guide-culture-poster.png" alt="Culture guide poster" class="guide__img">
+            <div class="guide__content guide__content--align-right guide__content--padding-top">
+            <h2 class="section-title guide__title">Culture and Heritage</h2>    
+            <p class="guide__descr guide__descr--margin-small">As well as covering heritage and tradition, our guides to culture introduce you to the designers, artists and chefs creating at the forefront of today's culture.</p>
+            <button class="btn-link guide__link guide__link--align-right">Shop Culture Guides</button>
+            </div>
+        </div>
+    </div>
+</section>
+      <section class="politics-guide guide">
+    <div class="container">
+        <div class="guide__container">
+            <img src="../img/power-img.png" alt="Politics guide poster" class="guide__img">
+            <div class="guide__content guide__content--padding-top">
+            <h2 class="section-title guide__title">Power and Politics</h2>    
+            <p class="guide__descr guide__descr--wide">Our guides to power take you behind the scenes to explore the power dynamics, policies and politics shaping a country's future and its global position.</p>
+            <button class="btn-link guide__link">Coming 2022!</button>
+            </div>
+        </div>
     </div>
 </section>
     </main>
