исправлено отображение изображений на экранах до 570px

--- a/app/index.html
+++ b/app/index.html
@@ -79,7 +79,7 @@
                 </div>
             </li>
             <li class="best-sellers__item sellers-card">
-                <img src="../img/sellers-woman-2.png" alt="German culture card" class="sellers-card__img">
+                <img src="../img/german-culture-woman.png" alt="German culture card" class="sellers-card__img">
                 <div class="sellers-card__content">
                     <h3 class="sellers-card__title">Thalby Guide to German Culture and Heritage</h3>
                     <span class="sellers-card__price">USD 6.99</span>
@@ -105,7 +105,7 @@
       <section class="culture-guide guide">
     <div class="container">
         <div class="guide__container guide__container--flex-reverse">
-            <img src="../img/guide-culture-poster.png" alt="Culture guide poster" class="guide__img">
+            <img src="../img/guide-culture.png" alt="Culture guide poster" class="guide__img">
             <div class="guide__content guide__content--align-right guide__content--padding-top">
             <h2 class="section-title guide__title">Culture and Heritage</h2>    
             <p class="guide__descr guide__descr--margin-small">As well as covering heritage and tradition, our guides to culture introduce you to the designers, artists and chefs creating at the forefront of today's culture.</p>
@@ -116,7 +116,7 @@
 </section>
       <section class="politics-guide guide">
     <div class="container">
-        <div class="guide__container">
+        <div class="guide__container guide__container--padding">
             <img src="../img/power-img.png" alt="Politics guide poster" class="guide__img">
             <div class="guide__content guide__content--padding-top">
             <h2 class="section-title guide__title">Power and Politics</h2>    
