Добавлен блок features + адаптив

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
       @include('partials/society-guide.html')
       @include('partials/culture-guide.html')
       @include('partials/politics-guide.html')
+      @include('partials/features.html')
     </main>
 
     @include('partials/footer.html')
