Сделана секция celebrities

--- a/app/index.html
+++ b/app/index.html
@@ -139,6 +139,35 @@
         </ul>
     </div>
 </section>
+      <section class="celebrities">
+    <div class="container">
+        <h2 class="section-title section-title--center celebrities__title">Each Thalby guide includes interviews with
+            a range of fascinating voices, such as</h2>
+            <ul class="celebrities__list">
+                <li class="celebrities__item celebrities-card">
+                    <img src="../img/celebritie-man.png" alt="a man" class="celebrities-card__img ">
+                    <p class="celebrities-card__speech celebrities-card__speech--man">"I don’t like things to be conventional. If it’s too nice, I bring disorder."</p>
+                    <span class="celebrities-card__name celebrities-card__name--man">Camille Muller,</span>
+                    <span class="celebrities-card__occupation celebrities-card__occupation--man">Landscape Designer, France</span>
+                    <span class="btn-link celebrities-card__link celebrities-card__link--man">Discover</span>
+                </li>
+                <li class="celebrities__item celebrities-card">
+                    <img src="../img/celebritie-woman.png" alt="a woman" class="celebrities-card__img">
+                    <p class="celebrities-card__speech celebrities-card__speech--wide">"Magic is not magic in the sense that I can just wish for anything."</p>
+                    <span class="celebrities-card__name">Sonia Kowalewski,</span>
+                    <span class="celebrities-card__occupation">Wicth, Germany</span>
+                    <span class="btn-link celebrities-card__link">Discover</span>
+                </li>
+                <li class="celebrities__item celebrities-card">
+                    <img src="../img/celebritie-girl.png" alt="a girl" class="celebrities-card__img">
+                    <p class="celebrities-card__speech celebrities-card__speech--wide">"I was eight years old when I entered my first competition. I won it."</p>
+                    <span class="celebrities-card__name">Lilly Stoephasius,</span>
+                    <span class="celebrities-card__occupation">Skateboarder, Germany</span>
+                    <span class="btn-link celebrities-card__link">Discover</span>
+                </li>
+            </ul>
+    </div>
+</section>
     </main>
 
     <footer class="footer">
