--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
       @include('partials/culture-guide.html')
       @include('partials/politics-guide.html')
       @include('partials/features.html')
+      @include('partials/celebrities.html')
     </main>
 
     @include('partials/footer.html')
