--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
       @include('partials/politics-guide.html')
       @include('partials/features.html')
       @include('partials/celebrities.html')
+      @include('partials/contacts.html')
     </main>
 
     @include('partials/footer.html')
