добавлен подвал + адаптив

--- a/app/index.html
+++ b/app/index.html
@@ -184,9 +184,36 @@
     </main>
 
     <footer class="footer">
-  <div class="container"></div>
+  <div class="container footer__container">
+    <div class="footer__logo">
+      <img src="../img/footer-logo-img.png" alt="Thalby" class="footer__img">
+      <div class="footer__social footer-social">
+        <a href="#" class="footer-social__link"><img src="../img/git.png" alt="Github" class="footer-social__item"></a>
+        <a href="#" class="footer-social__link"><img src="../img/twitter.png" alt="Twitter" class="footer-social__item"></a>
+        <a href="#" class="footer-social__link"><img src="../img/reddit.png" alt="Reddit" class="footer-social__item"></a>
+      </div>
+    </div>
+    <ul class="footer__about footer-about">
+      <li class="footer-about__item">About</li>
+      <li class="footer-about__item"><a href="#" class="footer-about__link">About us</a></li>
+      <li class="footer-about__item"><a href="#" class="footer-about__link">Privacy Policy</a></li>
+      <li class="footer-about__item"><a href="#" class="footer-about__link">Terms and Conditions</a></li>
+      <li class="footer-about__item"><a href="#" class="footer-about__link">Write for Us</a></li>
+    </ul>
+    <!-- <div class="footer__contacts"></div> -->
+    <ul class="footer__contacts footer-contacts">
+      <li class="footer-contacts__item">Contact</li>
+      <li class="footer-contacts__item"><a href="mailto:hi@thalby.com" class="footer-contacts__link">Email hi@thalby.com</a></li>
+      <li class="footer-contacts__item"><a href="#" class="footer-contacts__link">Help</a></li>
+    </ul>
+  </div>
 </footer>
 
+    <section class="copyright">
+    <div class="container copyright__container">
+        <span class="copyright__text">Thalby LLC © 2021</span>
+    </div>
+</section>
     
   </div>
   <script src="../src/js/main.js" type="modules"></script>
