--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
     </main>
 
     @include('partials/footer.html')
+    @include('partials/copyright.html')
     <!-- @include('html/h1.html') пример include -->
   </div>
   <script src="../src/js/main.js" type="modules"></script>
